kubernetes/apps/artemis-cluster/overseerr/app/HttpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app overseer
  namespace: &ns artemis-cluster
spec:
  hostnames:
    - "seer.dcunha.io"
  parentRefs:
    - name: external-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: *app
          kind: Service
          namespace: *ns
          port: 5055
