kubernetes/apps/artemis-cluster/overseerr/app/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app overseerr
  namespace: artemis-cluster
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`seer.dcunha.io`)
    kind: Rule
    services:
    - name: *app
      port: 5055
    middlewares:
    - name: default-headers
      namespace: kube-system
  tls:
    secretName: dcunha-io-tls
