kubernetes/apps/artemis-cluster/overseerr/app/Routing.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: artemis-cluster
  annotations:
    external-dns.alpha.kubernetes.io/hostname: seer.dcunha.io
spec:
  type: ExternalName
  externalName: 99.233.25.164
  ports:
  - port: &port 8123
    targetPort: *port
    protocol: TCP
    name: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app overseerr
  namespace: artemis-cluster
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`seer.dcunha.io`)
    kind: Rule
    services:
    - name: *app
      port: 5055
    middlewares:
    - name: default-headers
      namespace: kube-system
  tls:
    secretName: dcunha-io-tls
